--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "axios": "^1.7.7",
     "buefy": "npm:@ntohq/buefy-next@^0.1.4",
     "element-plus": "^2.8.4",
+    "swiper": "^8.4.7",
     "vue": "^3.4.29",
+    "vue-awesome-swiper": "^5.0.1",
     "vue-project": "file:",
-    "vue-router": "^4.3.3"
+    "vue-router": "^4.3.3",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.8.0",
@@ -26,6 +29,8 @@
     "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.23.0",
     "prettier": "^3.2.5",
+    "sass": "^1.80.5",
+    "sass-loader": "^16.0.2",
     "vite": "^5.3.1",
     "vite-plugin-vue-devtools": "^7.3.1"
   }
