updating product detail for keeping the id

--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "axios": "^1.7.7",
     "buefy": "npm:@ntohq/buefy-next@^0.1.4",
     "element-plus": "^2.8.4",
+    "jwt-decode": "^4.0.0",
     "swiper": "^8.4.7",
     "vue": "^3.4.29",
     "vue-awesome-swiper": "^5.0.1",
     "vue-project": "file:",
     "vue-router": "^4.3.3",
+    "vue3-toastify": "^0.2.4",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
