--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "prettier": "^3.2.5",
     "sass": "^1.80.5",
     "sass-loader": "^16.0.2",
+    "typescript": "^5.6.3",
     "vite": "^5.3.1",
     "vite-plugin-vue-devtools": "^7.3.1"
   }
